--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,14 +2,16 @@
 <html lang="en">
 
 <head>
+    <title>Eat-da-burger</title>
     <meta charset="UTF-8">
 
-    <title>Burgers!</title>
-    <script src="https://code.jquery.com/jquery.js"></script>
 </head>
 
 <body>
     {{{ body }}}
+
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+
 </body>
 
-</html>
+</HTML>
